--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div class="about__container bd-grid">
                         <div>
                             <h2 class="about__subtitle">quem somos</h2>
-                            <p class="about__text">Somos um grupo de amigos que amam esportes, nosso objetivo é criar momentos de entretenimento e experiências únicas no mundo das apostas esportivas. Focamos a nossa atenção no atendimento de excelência às necessidades do mercado brasileiro, pois entendemos as reais necessidades dos clientes do país.</p>           
+                            <p class="about__text">Somos um portal de esportes online, nosso objetivo é criar momentos de entretenimento e experiências únicas. Focamos a nossa atenção no atendimento de excelência às necessidades do mercado brasileiro, pois entendemos as reais necessidades dos clientes do país.</p>           
                             <p class="about__text">Com sistema de saques instantâneos via PIX sem burocracias, proporcionamos uma sensação de total liberdade e autonomia aos nossos jogadores.</p>           
                             <p class="about__text">Acreditamos que a experiência em nossa plataforma será nosso maior aliado na fidelização de clientes. Em nosso site, você consegue acompanhar os seus times favoritos.</p>           
                             <p class="about__text">Este site é um agregador e para afiliados. Não oferecemos serviços de apostas neste site. Oferecemos um portal informativo sobre programa de afiliação aos interessados em fazer parte do nosso projeto.</p>           
