--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <!--===== COMISSÕES =====-->
                 <section class="comissoes section" id="comissoes">
                     <h2 class="section-title">entenda as vantagens</h2>
-                    <p>O nosso sistema de afiliados é do tipo Revshare, no qual repassamos uma parte dos lucros que obtivemos com os clientes que você irá indicar para o nosso site. São 7 níveis de comissão, cada um tem diferentes remunerações e benefícios, confira a tabela a seguir:</p>
+                    <p>O nosso sistema de afiliados é do tipo Revshare, no qual repassamos uma parte dos lucros que obtivemos com os clientes que você irá indicar para o nosso site. São 3 níveis de comissão, cada um tem diferentes remunerações e benefícios, confira a tabela a seguir:</p>
                     <div class="comissoes__container bd-grid">
                         <table>
                             <tr class="tr-header">
@@ -122,7 +122,7 @@
                                     <i class="fa-solid fa-medal"></i>
                                 </td>
                                 <td>Prata</td>
-                                <td>1-5 depositantes</td>
+                                <td>1-9 depositantes</td>
                                 <td>10%</td>
                             </tr>
                             <tr class="tr-conteudo">
@@ -130,7 +130,7 @@
                                     <i class="fa-solid fa-medal"></i>
                                 </td>
                                 <td>Ouro</td>
-                                <td>6-15 depositantes</td>
+                                <td>10-30 depositantes</td>
                                 <td>20%</td>
                             </tr>
                             <tr class="color-dtq tr-conteudo">
@@ -138,7 +138,7 @@
                                     <i class="fa-solid fa-medal"></i>
                                 </td>
                                 <td>Diamante</td>
-                                <td>16+ depositantes</td>
+                                <td>31+ depositantes</td>
                                 <td>30%</td>
                             </tr>
                         </table>
@@ -169,7 +169,11 @@
                             <div class="icon-social">
                                 <a href="https://www.facebook.com/pagbet/"><i class="fa-brands fa-facebook"></i></a>
                                 <p class="icon-text">facebook.com/pagbet</p>                       
-                        </div>
+                            </div>
+                            <div class="icon-social">
+                                <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                                <p class="icon-text">Whatsapp</p>                       
+                            </div>
                     </div>
                 </section>
                 <!--===== ABOUT =====-->
