--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                             <input type="text" name="name" placeholder="Nome*" required>
                             <input type="tel" name="phone" placeholder="Telefone*" required>
                             <input type="text" name="email" placeholder="E-mail*" required>
-                            <input type="text" onfocus="(this.type='date')" onblur="(this.type='text')" name="$data-de-nascimento" placeholder="Data de Nascimento*" required>
+                            <input type="text" onfocus="(this.type='date')" onblur="(this.type='date')" name="$data-de-nascimento" placeholder="Data de Nascimento*" required>
                             <input type="tel" name="$whatsapp" placeholder="Whatsapp*" required>
                             <input type="text" name="honeypot" style="display:none">
                             <input type="hidden" name="accessKey" value="32c73dbb-314d-4e72-94b8-5e28db7a7108">
